iptables
# Generated by iptables-save v1.4.7 on Sat Aug 17 00:02:01 2013
*mangle
:PREROUTING ACCEPT [1808:4812598]
:INPUT ACCEPT [1664:4761006]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1653:4760718]
:POSTROUTING ACCEPT [1653:4760718]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill 
COMMIT
# Completed on Sat Aug 17 00:02:01 2013
# Generated by iptables-save v1.4.7 on Sat Aug 17 00:02:01 2013
*filter
:INPUT ACCEPT [25:52496]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [25:52496]
-A INPUT -p tcp -m tcp --dport 49152:49216 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5900:6100 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 16509 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1798 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p udp -m state --state NEW -m udp --dport 111 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 111 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 2049 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 32803 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p udp -m state --state NEW -m udp --dport 32769 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 892 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p udp -m state --state NEW -m udp --dport 892 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 875 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p udp -m state --state NEW -m udp --dport 875 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 662 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p udp -m state --state NEW -m udp --dport 662 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p udp -m state --state NEW -m udp --dport 111 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p tcp -m state --state NEW -m tcp --dport 111 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p tcp -m state --state NEW -m tcp --dport 2049 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p tcp -m state --state NEW -m tcp --dport 32803 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p udp -m state --state NEW -m udp --dport 32769 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p tcp -m state --state NEW -m tcp --dport 892 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p udp -m state --state NEW -m udp --dport 892 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p tcp -m state --state NEW -m tcp --dport 875 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p udp -m state --state NEW -m udp --dport 875 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p tcp -m state --state NEW -m tcp --dport 662 -j ACCEPT 
-A INPUT -s 192.168.0.0/16 -p udp -m state --state NEW -m udp --dport 662 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p udp -m state --state NEW -m udp --dport 111 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 111 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 2049 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 32803 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p udp -m state --state NEW -m udp --dport 32769 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 892 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p udp -m state --state NEW -m udp --dport 892 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 875 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p udp -m state --state NEW -m udp --dport 875 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 662 -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p udp -m state --state NEW -m udp --dport 662 -j ACCEPT 
COMMIT
# Completed on Sat Aug 17 00:02:01 2013
# Generated by iptables-save v1.4.7 on Sat Aug 17 00:02:01 2013
*nat
:PREROUTING ACCEPT [148:51808]
:POSTROUTING ACCEPT [99:10654]
:OUTPUT ACCEPT [99:10654]
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535 
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535 
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE 
COMMIT
# Completed on Sat Aug 17 00:02:01 2013
